--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,11 +1,29 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-    {% stylesheets '@AppBundle/Resources/mycss/*' %}
+    {% stylesheets 'mycss/*' %}
         <link rel="stylesheet" href="{{ asset_url }}" />
         <link href='https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
     {% endstylesheets %}
 {% endblock %}
 {% block body %}
+    <nav id="bt-menu" class="bt-menu">
+        <a href="#" class="bt-menu-trigger" title="Меню"><span>Menu</span></a>
+        <a href="{{ path('registration') }}" class="fa fa-sign-in fa-4x" title="Регистрация"><span></span></a>
+        <ul id="open-app-button">
+            <li><a href="" class="fa fa-calculator fa-3x" id="open-ip-calc"  title="IP-калькулятор"></a></li>
+            <li><a href="" class="fa fa-file-text-o fa-3x" id="open-master-report" title="Мастер-отчетов"></a></li>
+            <li><a href="" class="fa fa-sitemap fa-3x" id="open-card-carno" title="Карты Карно"></a></li>
+            <li><a href="" class="fa fa-anchor fa-3x" id="open-diagram" title="Диаграма Вольпера-Смитта"></a></li>
+        </ul>
+        <ul>
+            <li><a href="#" class="fa fa-refresh" title="Обновить"></a></li>
+            <li><a href="#" class="fa fa-comment" title="Обратная связь"></a></li>
+
+            {#<li><a href="#" class="fa fa-vk fa-3x">VK</a></li>#}
+            {#<li><a href="#" class="fa fa-facebook fa-3x">Facebook</a></li>#}
+            {#<li><a href="#" class="fa fa-google-plus fa-3x">Google+</a></li>#}
+        </ul>
+    </nav>
     <div class="container-fluid">
         <div>
             <h1>ITS-assistant</h1>
@@ -51,11 +69,11 @@
                     <h2 class="modal-title" id="title-calc-modal">IP-калькулятор</h2>
                 </div>
                 <div class="modal-body">
-                    <form role="form">
+                    <form role="form" id="form-calc-IP">
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <label for="title-input-ip-address">IP-адрес</label>
+                                    <label for="input-ip-address">IP-адрес</label>
                                 </div>
                                 <div class="col-lg-3">
                                     <input type="text" class="form-control input-ip-address text-center" placeholder="192" maxlength="3" size="3" pattern="\d{1,3}" required>
@@ -74,9 +92,9 @@
                                     <span class="hidden">.</span>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row" id="mask-sub-network">
                                 <div class="col-lg-12">
-                                    <label for="input-ip-address">Маска подсети</label>
+                                    <label for="input-mask-subnetwork">Маска подсети</label>
                                 </div>
                                 <div class="col-lg-3">
                                     <input type="text" class="form-control input-mask-subnetwork text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
@@ -96,15 +114,30 @@
                                 </div>
                                 <div class="сol-lg-12 text-center"><span>или</span></div>
                                 <div class="col-lg-offset-4 col-lg-4">
-                                    <input type="text" class="form-control input-mask-subnetwork text-center" id="number-one-in-mask" placeholder="/24" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                    <input type="text" class="form-control input-mask-subnetwork text-center" id="number-one-in-mask" placeholder="/24" maxlength="3" pattern="\d{1,3}">
                                     <span class="hidden">.</span>
                                 </div>
                             </div>
                             <div class="row hidden">
                                 <div class="col-lg-12">
-                                    <label for="output-ip-address">Адрес сети</label>
                                     <div class="col-lg-12">
-                                        <label for="input-ip-address">IP-адрес</label>
+                                        <label for="output-ip-address">Номер сети</label>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <input type="text" class="form-control output-ip-address text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                        <span>.</span>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <input type="text" class="form-control output-ip-address text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                        <span>.</span>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <input type="text" class="form-control output-ip-address text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                        <span>.</span>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <input type="text" class="form-control output-ip-address text-center"  placeholder="0" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                        <span class="hidden">.</span>
                                     </div>
                                 </div>
                             </div>
@@ -113,7 +146,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" style="float: right" data-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary" id="calc-IP" style="float: left">Посчитать</button>
+                    <button type="submit" class="btn btn-success" form="form-calc-IP" id="calc-IP" style="float: left">Посчитать</button>
                 </div>
             </div>
         </div>
@@ -171,7 +204,7 @@
     </div>
 {% endblock %}
 {% block javascripts %}
-    {% javascripts '@AppBundle/Resources/myjs/*' %}
+    {% javascripts 'myjs/*' %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
