--- a/web/mycss/ip-calculator.css
+++ b/web/mycss/ip-calculator.css
@@ -32,7 +32,7 @@
     font-size: 20px;
     margin-left: 30%;
 }
-.input-ip-address, .input-mask-subnetwork {
+.input-ip-address, .input-mask-subnetwork, .output-mask-subnetwork {
     padding-left: 2px;
     padding-right: 2px;
 }
