--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,6 +6,7 @@
     {% stylesheets 'mycss/*' %}
         <link rel="stylesheet" href="{{ asset_url }}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Comfortaa&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     {% endstylesheets %}
     {% javascripts 'myjs/AnimatedBorderMenu/modernizr.custom.js'%}
         <script src="{{ asset_url }}"></script>
@@ -37,49 +38,16 @@
         <div class="row text-center">
             <h1 id="name-app">ITS-assistant</h1>
         </div>
-        <div class="row text-center">
-            <a href="{{ path('login') }}" class="btn-success btn">
+        <div class="row text-center" id="div-auth-reg">
+            <button href="{{ path('login') }}" class="btn-success btn" id="login-button">
                 <i class="fa fa-sign-in fa-lg"></i>
                 <span>Войти</span>
-            </a>
-            </a>
-            <a href="{{ path('registration') }}" class="btn btn-warning">
+            </button>
+            <button class="btn btn-warning" id="registration-button">
                 <i class="fa fa-user-plus fa-lg"></i>
                 <span>Регистрация</span>
-            </a>
+            </button>
         </div>
-        {#<div class="row" style="height: 50%">#}
-            {#<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="card-carno" style=" background: url({{ asset('/myimg/card-carno.jpg') }}) no-repeat; background-size: 100% 100%;">#}
-                {#<div class="row" style="height: 100%;">#}
-                    {#<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 app" >#}
-
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-            {#<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="diagrams-volpera-smita" style=" background: url({{ asset('/myimg/diagrams.jpg') }}) no-repeat; background-size: cover;">#}
-                {#<div class="row" style="height: 100%;">#}
-                    {#<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 app">#}
-
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
-        {#<div class="row" style="height: 50%">#}
-            {#<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="ip-calculator" style=" background: url({{ asset('/myimg/network.jpg') }}) no-repeat; background-size: cover;">#}
-                {#<div class="row" style="height: 100%;">#}
-                    {#<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 app" >#}
-
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-            {#<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="master-report" style=" background: url({{ asset('/myimg/report.png') }}) no-repeat; background-size: cover">#}
-                {#<div class="row" style="height: 100%;">#}
-                    {#<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 app">#}
-
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
     </div>
     <footer class="text-center">
         <div id="social-network">
@@ -103,155 +71,18 @@
             </address>
         </div>
     </footer>
-    <div class="modal fade bs-example-modal-sm" id="ip-calc-modal" tabindex="-1" role="dialog" aria-labelledby="title-calc-modal" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h2 class="modal-title" id="title-calc-modal">IP-калькулятор</h2>
-                </div>
-                <div class="modal-body">
-                    <form role="form" id="form-calc-IP">
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <label for="input-ip-address">IP-адрес</label>
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control input-ip-address text-center" placeholder="192" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                    <span>.</span>
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control input-ip-address text-center" placeholder="168" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                    <span>.</span>
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control input-ip-address text-center" placeholder="0" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                    <span>.</span>
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control input-ip-address text-center"  placeholder="1" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                    <span class="hidden">.</span>
-                                </div>
-                            </div>
-                            <div class="row" id="mask-sub-network">
-                                <div class="col-lg-12">
-                                    <label for="input-mask-subnetwork">Маска подсети</label>
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control input-mask-subnetwork text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                    <span>.</span>
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control input-mask-subnetwork text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                    <span>.</span>
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control input-mask-subnetwork text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                    <span>.</span>
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control input-mask-subnetwork text-center"  placeholder="0" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                    <span class="hidden">.</span>
-                                </div>
-                                <div class="сol-lg-12 text-center"><span>или</span></div>
-                                <div class="col-lg-offset-4 col-lg-4">
-                                    <input type="text" class="form-control input-mask-subnetwork text-center" id="number-one-in-mask" placeholder="/24" maxlength="3" pattern="\d{1,3}">
-                                    <span class="hidden">.</span>
-                                </div>
-                            </div>
-                            <div class="row hidden">
-                                <div class="col-lg-12">
-                                    <div class="col-lg-12">
-                                        <label for="output-ip-address">Номер сети</label>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <input type="text" class="form-control output-ip-address text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                        <span>.</span>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <input type="text" class="form-control output-ip-address text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                        <span>.</span>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <input type="text" class="form-control output-ip-address text-center" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                        <span>.</span>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <input type="text" class="form-control output-ip-address text-center"  placeholder="0" maxlength="3" size="3" pattern="\d{1,3}" required>
-                                        <span class="hidden">.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" style="float: right" data-dismiss="modal">Закрыть</button>
-                    <button type="submit" class="btn btn-success" form="form-calc-IP" id="calc-IP" style="float: left">Посчитать</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="master-report-modal" tabindex="-1" role="dialog" aria-labelledby="title-master-report-modal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h2 class="modal-title" id="title-master-report-modal">Мастер-отчетов</h2>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary">Посчитать</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="card-carno-modal" tabindex="-1" role="dialog" aria-labelledby="title-card-carno-modal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h2 class="modal-title" id="title-card-carno-modal">Карты Карно</h2>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-success">Посчитать</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="diagram-modal" tabindex="-1" role="dialog" aria-labelledby="title-diagram-modal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h2 class="modal-title" id="title-diagram-modal">Диаграма Вольпера-Смитта</h2>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary">Сохранить изменения</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include(':default:modal-login.html.twig') %}
+    {% include(':default:modal-registration.html.twig') %}
+    {% include(':default:temp-modal-window.html.twig') %}
 {% endblock %}
 {% block javascripts %}
-    {% javascripts 'myjs/*' %}
-        <script src="{{ asset_url }}"></script>
-    {% endjavascripts %}
     {% javascripts
+        'myjs/detect-browser.js'
+        'myjs/cross-event.js'
+        'myjs/useCross.js'
         'myjs/AnimatedBorderMenu/classie.js'
         'myjs/AnimatedBorderMenu/borderMenu.js'
+        'myjs/registration-autorization.js'
     %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
