--- a/app/Resources/views/default/temp-modal-window.html.twig
+++ b/app/Resources/views/default/temp-modal-window.html.twig
@@ -1,9 +1,9 @@
-<div class="modal fade" id="temp-window" tabindex="-1" role="dialog" aria-labelledby="title-temp-window" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal fade in" id="tempModal" tabindex="-1" role="dialog" aria-labelledby="title-tempModal" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header text-center">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h2 class="modal-title" id="title-temp-window"></h2>
+                <h2 class="modal-title" id="title-tempModal"></h2>
             </div>
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
