--- a/app/Resources/views/default/modal-registration.html.twig
+++ b/app/Resources/views/default/modal-registration.html.twig
@@ -3,10 +3,10 @@
         <div class="modal-content">
             <div class="modal-header text-center">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h2 class="modal-title" id="title-reg-modal">Авторизация</h2>
+                <h2 class="modal-title" id="title-reg-modal">Регистрация</h2>
             </div>
             <div class="modal-body">
-                <form role="form" action="{{ path('sign_up') }}" id="registration-form" method="post">
+                <form role="form" action="{{ path('sign_up') }}" id="registration-form" name="reg-form" method="post">
                     <div class="form-group">
                         <label for="input-first-name">Имя</label>
                         <div class="input-group">
