--- a/app/Resources/views/default/modal-registration.html.twig
+++ b/app/Resources/views/default/modal-registration.html.twig
@@ -36,7 +36,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
                             {# Реализовать проверку js #}
-                            <input type="email" class="form-control" name="email" pattern="/[a-z]+\.?[a-z]*+@[a-z]+\.[a-z]+/"  id="input-email" required placeholder="Введите Ваш e-mail">
+                            <input type="email" class="form-control" name="email" pattern="^.+@.+\..{2,}$"  id="input-email" required placeholder="Введите Ваш e-mail">
                             <span class="glyphicon form-control-feedback"></span>
                         </div>
                     </div>
