--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -115,6 +115,7 @@
         {% javascripts
             'myjs/AnimatedBorderMenu/classie.js'
             'myjs/AnimatedBorderMenu/borderMenu.js'
+            'myjs/jquery.easing.1.3.js'
             'myjs/indexPage.js'
             'myjs/ip-calc.js'
         %}
